--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,12 @@
     <groupId>com.example</groupId>
     <artifactId>car-rental-project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>car-rental-project</name>
     <description>car-rental-project</description>
+    <modules>
+        <module>backend</module>
+    </modules>
     <properties>
         <java.version>17</java.version>
     </properties>
