--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 logging.level.com.example.carrentalproject.service=debug
+
+# h2 db config
+spring.datasource.url=jdbc:h2:mem:car-rental
+spring.datasource.username=sa
+spring.datasource.password=
